[tool.poetry]
name = "pycbf"
version = "0.0.96"
description = "An API for CBF/imgCIF Crystallographic Binary Files"
homepage="http://www.bernstein-plus-sons.com/software/CBF/"
authors = ["Herbert J. Bernstein <yaya@bernstein-plus-sons.com>", "Paul J. Ellis"]
maintainers = ["Nicholas Devenish <ndevenish@gmail.com>"]
license = "LGPL-2.1-or-later"
readme="README.md"
build = "build.py"
repository="https://github.com/ndevenish/pycbf"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]


[tool.poetry.dependencies]
python = ">=2.7"

[tool.poetry.dev-dependencies]
ninja = "^1.10.0"
cmake = [ { version="^3.18.4", markers= "platform_machine != 'arm64' " } ]
pytest = [
    { version="^4.6", python="^2.7" },
    { version=">6", python=">=3.6"},
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = "cbflib/|src/pycbf/__init__.py"

[tool.isort]
skip = [ "cbflib/", "setup.py", "src/pycbf/__init__.py"]
