[build-system]
requires = ["setuptools", "Cython~=0.29.23"]
build-backend = "setuptools.build_meta"

[project]
name = "pycbf"
version = "0.9.6.6.dev"
description = "An API for CBF/imgCIF Crystallographic Binary Files"
authors = [
    { name = "Herbert J. Bernstein", email = "yaya@bernstein-plus-sons.com" },
    { name = "Paul J. Ellis" },
]
maintainers = [{ name = "Nicholas Devenish", email = "ndevenish@gmail.com" }]
license = { text = "LGPL-2.1-or-later" }
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
# include = [
#     { path = "pycbf_wrap.c", format = "sdist" },
#     { path = "LICENCE.txt", format = "sdist" },
#     { path = "cbflib/src/*.c", format = "sdist" },
#     { path = "cbflib/include/*.h", format = "sdist" },
#     { path = "tests/*.py", format = "sdist" },
#     { path = "src/pycbf/py.typed" },
# ]
requires-python = ">=3.6"
dependencies = ["numpy>=1.17"]

[project.urls]
Homepate = "http://www.bernstein-plus-sons.com/software/CBF/"
Repository = "https://github.com/dials/pycbf"

[project.optional-dependencies]
dev = [
    "Cython~=0.29.23",
    "toml~=0.10.2",
    "pytest~=6.2.4",
    "dials-data",
    "bump2version~=1.0.1",
]

# [[tool.setuptools.ext-modules]]
# name = "pycbf._pycbf"
# sources = [
#     "pycbf_wrap.c",
#     "cbflib/src/cbf.c",
#     "cbflib/src/cbf_airy_disk.c",
#     "cbflib/src/cbf_alloc.c",
#     "cbflib/src/cbf_ascii.c",
#     "cbflib/src/cbf_binary.c",
#     "cbflib/src/cbf_byte_offset.c",
#     "cbflib/src/cbf_canonical.c",
#     "cbflib/src/cbf_codes.c",
#     "cbflib/src/cbf_compress.c",
#     "cbflib/src/cbf_context.c",
#     "cbflib/src/cbf_copy.c",
#     "cbflib/src/cbf_file.c",
#     "cbflib/src/cbf_getopt.c",
#     "cbflib/src/cbf_lex.c",
#     "cbflib/src/cbf_minicbf_header.c",
#     "cbflib/src/cbf_nibble_offset.c",
#     "cbflib/src/cbf_packed.c",
#     "cbflib/src/cbf_predictor.c",
#     "cbflib/src/cbf_read_binary.c",
#     "cbflib/src/cbf_read_mime.c",
#     "cbflib/src/cbf_simple.c",
#     "cbflib/src/cbf_string.c",
#     "cbflib/src/cbf_stx.c",
#     "cbflib/src/cbf_tree.c",
#     "cbflib/src/cbf_ulp.c",
#     "cbflib/src/cbf_uncompressed.c",
#     "cbflib/src/cbf_write.c",
#     "cbflib/src/cbf_write_binary.c",
#     "cbflib/src/cbf_ws.c",
#     "cbflib/src/cbff.c",
#     "cbflib/src/fgetln.c",
#     "cbflib/src/img.c",
#     "cbflib/src/md5c.c",
# ]
# include-dirs = ["cbflib/include"]
# define-macros = [["CBF_NO_REGEX"], ["SWIG_PYTHON_STRICT_BYTE_CHAR"]]

[tool.ruff]
exclude = ["src/pycbf/_wrapper.py"]

[tool.ruff.format]
exclude = ["cbflib/", "src/pycbf/__init__.py"]

[tool.towncrier]
package = "pycbf"
package_dir = ".."
filename = "CHANGELOG.rst"

[tool.pytest.ini_options]
addopts = "--regression -ra"
testpaths = ["tests"]
