[build-system]
requires = ["setuptools", "Cython~=0.29.23"]
build-backend = "setuptools.build_meta"

[project]
name = "pycbf"
version = "0.9.6.6.dev"
description = "An API for CBF/imgCIF Crystallographic Binary Files"
authors = [
    { name = "Herbert J. Bernstein", email = "yaya@bernstein-plus-sons.com" },
    { name = "Paul J. Ellis" },
]
maintainers = [{ name = "Nicholas Devenish", email = "ndevenish@gmail.com" }]
license = { text = "LGPL-2.1-or-later" }
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.6"
dependencies = ["numpy>=1.17"]

[project.urls]
Homepate = "http://www.bernstein-plus-sons.com/software/CBF/"
Repository = "https://github.com/dials/pycbf"

[project.optional-dependencies]
dev = [
    "Cython~=0.29.23",
    "toml~=0.10.2",
    "pytest~=6.2.4",
    "dials-data",
    "bump2version~=1.0.1",
]

[tool.ruff]
exclude = ["src/pycbf/_wrapper.py"]

[tool.ruff.format]
exclude = ["cbflib/", "src/pycbf/__init__.py"]

[tool.towncrier]
package = "pycbf"
package_dir = ".."
filename = "CHANGELOG.rst"

[tool.pytest.ini_options]
addopts = "--regression -ra"
testpaths = ["tests"]
